@@ -128,6 +128,7 @@ start_daemon() {
     $JVM_MS_OPT \
     $JVM_MX_OPT \
     $JVM_SS_OPT \
+    --enable-native-access=ALL-UNNAMED \
     -server \
     -classpath "$CLASSPATH" \
     -Djava.awt.headless=true \
